--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: deploy pod
+name: deloy pod
 on:
   release:
     types: 
@@ -7,7 +7,7 @@ jobs:
   deploy:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2  
+    - uses: actions/checkout@v2    
     - name: Install Cocoapods
       run: gem install cocoapods      
     - name: Deploy to Cocoapods
